--- a/web/cart.html
+++ b/web/cart.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon Panier</title>
     <link rel="stylesheet" href="style.css">
-    <title>Panier</title>
 </head>
 <body>
-    <h1>Votre Panier</h1>
+    <h1>Mon Panier</h1>
     <div id="cart-items"></div>
-    <a href="products.html" class="btn">Retour aux Produits</a>
+    <a href="index.html" class="btn">Retour aux Produits</a>
 
-    <script src="script.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
