--- a/web/index.html
+++ b/web/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Accueil - E-Commerce</title>
+    <link rel="icon" type="image/x-icon" href="../web/image/DIOR.png">
 </head>
 <body>
-    <h1>Bienvenue sur notre E-Commerce</h1>
+    <h1>Bienvenue sur notre notre site </h1>
     <a href="products.html" class="btn">Voir les Produits</a>
 </body>
 </html>
