--- a/web/parfum.html
+++ b/web/parfum.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produits</title>
+    <title>Parfums</title>
     <link rel="stylesheet" href="stylepro.css">
     <link rel="icon" type="image/x-icon" href="image/DIOR.png"> 
 </head>
 <body>
     <main>
-        <h1>Nos vetements</h1>
+        <h1>Nos Parfums</h1>
         <div id="product-list"></div>
         <a href="cart.html" class="btn">Voir le Panier</a>
         <a href="index.html" class="btn">Retour à l'accueil</a>
     </main>
     
-    <script src="script/script.js"></script>
+    <script src="script/parfum.js"></script>
 </body>
 <footer>
     &copy; 2025 DIOR-PRIME. Tous droits réservés.
